--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,66 @@ body {
 }
 
 header h1 {
-    color: #7B4019;
-    font-family: sans-serif;
-    font-size: 40px;
-    background-color: #FFBF78;
-    padding: 30px 20px;
-    margin: 0;
+    color: #708A58;
+}
+
+.side-list ul {
+    background-color: #708A58;
+    border-radius: 20px;
+    padding: 20px 5px;
+    list-style: none;
+}
+
+.side-list li {
+    font-size: 25px;
+    line-height: 1.5;
+    color: white;
     text-align: center;
+    margin: 30px 0px;
+}
+
+.main-content {
+    background-color: #5A827E;
+    padding: 40px 5px;
+    border-radius: 30px;
+    color: white;
+    text-align: center;
+}
+
+.lead-status {
+    background-color: #1DCD9F;
+    padding: 20px 5px;
+    border-radius: 30px;
+    margin: 30px 0px;
+}
+
+.lead-status h5 {
+    text-align: center;
+    color: white;
+    font-size: 25px;
+}
+
+.lead-status ul {
+    list-style: none;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.lead-status li {
+    margin: 10px 0px;
+}
+
+.lead-status li h6 {
+    font-size: 20px;
+    margin: 10px 0px;
+}
+
+.lead-status h6 span {
+    border-radius: 5px;
+    padding: 15px 20px;
+    background-color: black;
+    color: white;
 }
