--- a/src/App.css
+++ b/src/App.css
@@ -300,11 +300,18 @@ select {
     border: 0;
     background-color: #e2bc8c;
     border-radius: 20px;
-    padding: 5px 18px;
+    padding: 5px 5px;
+    font-size: 14px;
+    font-family: sans-serif;
 }
 
 .comment-section li span {
     color: #082523;
+}
+
+.comment-section select {
+    font-size: 14px;
+    width: auto;
 }
 
 .add-comment {
